Tue Dec 15 16:42:10 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Remove old parameter from
	  get_suggested_facets().

Tue Dec 15 16:09:04 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/mset_search_results.py,
	  xappy/searchconnection.py: Remove CacheResultStats and
	  MSetResultStats - replace them with a generic ResultStats which
	  takes both the mset and the cached value, and returns the cached
	  values if not None, and reads the mset otherwise.  Adjust the
	  search code to perform the search if any of the cached values are
	  None.
	* xappy/unittests/cached_searches.py: Minimal test for stats return
	  values.

Tue Dec 15 16:08:23 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Revert previous fix to stats
	  storage, but also don't store anything if all stats are None.

Tue Dec 15 14:14:27 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py: Return None if no stats, instead
	  of (None, None, None).

Tue Dec 15 14:12:03 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Update a couple of comments.

Tue Dec 15 09:56:56 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/mset_search_results.py,xappy/searchresults.py,
	  xappy/unittests/facets.py: Add SearchResults.get_facets() which
	  returns all the facets.  Refactor the facet calculation to store
	  results in a more useful form for returning this.

Tue Dec 15 08:55:49 GMT 2009  Richard Boulton <richard@tartarus.org>

	* setup.py,xappy/__init__.py: Bump version to 0.6.0 - release won't
	  be for a little while yet, but this allows me to test the version
	  for backward compatibility.

Tue Dec 15 08:43:24 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/mset_search_results.py,xappy/searchconnection.py,
	  xappy/searchresults.py: Refactor facet calculation.  Scoring now